--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -13,10 +13,10 @@ spec:
         app: backend
     spec:
       containers:
-      - name: backend
-        image: abarna20/notes-backend:1.0
-        ports:
-        - containerPort: 3000
+        - name: backend
+          image: abarna20/notes-backend:1.0
+          ports:
+            - containerPort: 3000
 ---
 apiVersion: v1
 kind: Service
@@ -26,7 +26,9 @@ spec:
   selector:
     app: backend
   ports:
-    - protocol: TCP
-      port: 3000
+    - port: 3000
       targetPort: 3000
   type: ClusterIP
+
+
+
